--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,5 +22,6 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
-
+    implementation 'org.xutils:xutils:3.3.4'
+    implementation 'com.alibaba:fastjson:1.2.11'
 }
