--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,9 +19,11 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     implementation 'org.xutils:xutils:3.3.4'
     implementation 'com.alibaba:fastjson:1.2.11'
+    implementation project(':LibMarsdaemon')
+    implementation files('libs/HwPush_SDK_V2705.jar')
 }
