--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -50,7 +50,18 @@
         <activity android:name=".ui.MainActivity"
             android:screenOrientation="portrait"
             android:launchMode="singleTask"/>
+        <activity android:name=".ui.BluetoothDeviceListActivity"
+            android:screenOrientation="portrait"
+            android:launchMode="singleTask"
+            />
+        <activity android:name=".ui.OrderListActivity"
+            android:screenOrientation="portrait"
 
+            />
+        <activity android:name=".ui.SettingActivity"
+            android:screenOrientation="portrait"
+
+            />
         <service android:name=".service.OrderJobService" android:process=":process1"/>
         <receiver android:name=".receiver.Receiver1" android:process=":process1"/>
         <service android:name=".service.Service2" android:process=":process2"/>
