--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,7 +37,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".ui.WelcomeActivity"
-            android:launchMode="singleTask">
+            >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -46,13 +46,13 @@
         </activity>
         <activity android:name=".ui.LoginActivity"
             android:screenOrientation="portrait"
-            android:launchMode="singleTask"/>
+           />
         <activity android:name=".ui.MainActivity"
             android:screenOrientation="portrait"
             android:launchMode="singleTask"/>
         <activity android:name=".ui.BluetoothDeviceListActivity"
             android:screenOrientation="portrait"
-            android:launchMode="singleTask"
+            android:launchMode="singleTop"
             />
         <activity android:name=".ui.OrderListActivity"
             android:screenOrientation="portrait"
