--- a/build.gradle
+++ b/build.gradle
@@ -19,8 +19,9 @@ allprojects {
     repositories {
         mavenCentral()
         maven { url 'http://maven.aliyun.com/nexus/content/groups/public/' }
+        maven{ url 'http://maven.aliyun.com/nexus/content/repositories/jcenter'}
+        maven { url "https://jitpack.io" }
         google()
-        jcenter()
     }
 }
 
