--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -215,6 +215,7 @@
             android:configChanges="orientation|screenSize|locale|layoutDirection"
             android:exported="false">
         </activity>
+        <service android:name=".service.PrintService"/>
     </application>
 
 </manifest>
