--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,4 +44,5 @@ dependencies {
     compile 'org.greenrobot:greendao:3.2.2' // add library
     compile 'org.greenrobot:greendao-generator:3.2.2'
 //    debugImplementation 'com.amitshekhar.android:debug-db:1.0.4'
+    implementation 'com.facebook.stetho:stetho:1.5.0'
 }
