--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,18 +50,17 @@ dependencies {
     compile 'com.scwang.smartrefresh:SmartRefreshHeader:1.0.5.1'
     implementation 'am.util:printer:2.1.0'
     implementation 'com.google.zxing:core:3.3.0'
-    compile 'org.greenrobot:greendao:3.2.2' // add library
+    compile 'org.greenrobot:greendao:3.2.2'
+    // add library
     compile 'org.greenrobot:greendao-generator:3.2.2'
-//    debugImplementation 'com.amitshekhar.android:debug-db:1.0.4'
+    //    debugImplementation 'com.amitshekhar.android:debug-db:1.0.4'
     implementation 'com.facebook.stetho:stetho:1.5.0'
     // mta包稳定版和测试版本二选一，mid包必须要添加 ，可视化埋点根据需要添加
-
-//mta 3.4.7 稳定版
-    compile 'com.qq.mta:mta:3.4.7-release'
-
-//mid jar包 必须添加
-    compile 'com.tencent.mid:mid:4.06-Release'
-
-//可视化埋点的相关jar包 （根据需要添加），可视化埋点的版本号，和必须和当前MTA的版本号必须匹配使用 需要在配置文件中增加配置，具体请参考 高级功能中可视化埋点的接入。
-    compile 'com.qq.visual:visual:3.4.0.1-beta'
+    //mta 3.4.7 稳定版
+    implementation 'com.qq.mta:mta:3.4.7-release'
+    //mid jar包 必须添加
+    implementation 'com.tencent.mid:mid:4.06-Release'
+    //可视化埋点的相关jar包 （根据需要添加），可视化埋点的版本号，和必须和当前MTA的版本号必须匹配使用 需要在配置文件中增加配置，具体请参考 高级功能中可视化埋点的接入。
+    implementation 'com.qq.visual:visual:3.4.0.1-beta'
+    implementation files('libs/sun.misc.BASE64Decoder.jar')
 }
