--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -74,6 +74,15 @@
         <service android:name=".service.Service2" android:process=":process2"/>
         <receiver android:name=".receiver.Receiver2" android:process=":process2"/>
         <service android:name=".service.OrderJobService" android:process=":process1"/>
+        <provider
+            android:authorities="com.order.print.fileprovider"
+            android:name="android.support.v4.content.FileProvider"
+            android:grantUriPermissions="true"
+            android:exported="false">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/filepaths"/>
+        </provider>
 
 
 
